--- a/index_files/Login-page.html
+++ b/index_files/Login-page.html
@@ -40,19 +40,19 @@
         <div class="auto-login-layout">
           <div class="google-button-layout">
             <div class="google-logo" >
-              <img class="google-img" src="signup/../icons/google-logo.svg">
+              <img class="google-img" src="../signup/icons/google-logo.svg">
             </div>
             <button class="google-button">Continue with Google</button>
           </div>
             <div class="facebook-button-layout">
               <div class="facebook-logo">
-                <img class="facebook-img" src="signup/../icons/facebook-logo.svg">
+                <img class="facebook-img" src="../signup/icons/facebook-logo.svg">
               </div>
               <button class="facebook-button">Continue with Facebook</button>
             </div>
             <div class="apple-button-layout">
               <div class="apple-logo">
-                <img class="apple-img" src="signup/../icons/apple-logo.svg">
+                <img class="apple-img" src="../signup/icons/apple-logo.svg">
               </div>
               <button class="apple-button">Continue with Apple</button>
             </div>
